# src/modules/accounts/useCases/authenticateUser/AuthenticateUserController.ts
@@ -7,7 +7,7 @@ export class AuthenticateUserController {
   async handle(request: Request, response: Response): Promise<Response> {
     const authenticateUserBodySchema = z.object({
       email: z.string().email().max(45).toLowerCase(),
-      password: z.string().max(6),
+      password: z.string().min(4).max(6),
     })
 
     const { email, password } = authenticateUserBodySchema.parse(request.body)
