# src/modules/accounts/useCases/createUser/CreateUserController.ts
@@ -6,9 +6,9 @@ import { z } from 'zod'
 export class CreateUserController {
   async handle(request: Request, response: Response): Promise<Response> {
     const createUserBodySchema = z.object({
-      name: z.string().max(45).toLowerCase(),
+      name: z.string().min(3).max(45).toLowerCase(),
       email: z.string().email().max(45).toLowerCase(),
-      password: z.string().max(6),
+      password: z.string().min(4).max(6),
       driver_license: z.string().max(10),
     })
 
