# src/modules/accounts/useCases/updateUserAvatar/UpdateUserAvatarController.ts
@@ -10,11 +10,12 @@ export class UpdateUserAvatarController {
 
     const updateUserAvatarUseCase = container.resolve(UpdateUserAvatarUseCase)
 
-    await updateUserAvatarUseCase.execute({
+    const user = await updateUserAvatarUseCase.execute({
       user_id: id,
       avatar_file,
     })
 
-    return response.status(204).json()
+    delete user.password
+    return response.status(200).json(user)
   }
 }
