# src/swagger.json
@@ -8,45 +8,218 @@
       "email": "victoremmanuelmn@gmail.com"
     }
   },
+  "servers": [
+    {
+      "url": "https://api.ridemanager.com.br"
+    }
+  ],
   "paths": {
-    "/categories": {
+    "/users": {
       "post": {
-        "tags": ["Category"],
-        "summary": "Create a new category",
-        "description": "Create a new category",
-        "security": [{ "bearerAuth": [] }],
+        "tags": ["Users"],
+        "summary": "Create a new user",
+        "description": "Create a new user",
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "type": "object",
-                "properties": {
-                  "name": {
-                    "type": "string"
-                  },
-                  "description": {
-                    "type": "string"
-                  }
-                },
-                "example": {
-                  "name": "Category name sample",
-                  "description": "Category description sample"
-                }
+                "$ref": "#/definitions/User"
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/User"
+                }
+              }
+            }
           },
-          "500": {
-            "description": "Category already exists"
+          "409": {
+            "description": "User already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "User already exists."
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/profile": {
+      "get": {
+        "tags": ["Users"],
+        "summary": "Get user profile",
+        "description": "Get user profile",
+        "security": [{ "bearerAuth": [] }],
+        "responses": {
+          "200": {
+            "description": "Sucess",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users/avatar": {
+      "patch": {
+        "tags": ["Users"],
+        "summary": "Update user avatar",
+        "description": "Update user avatar",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "avatar": {
+                    "type": "string",
+                    "format": "binary"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/UserAvatar"
+                }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "User not found"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/password/forgot": {
+      "post": {
+        "tags": ["Password"],
+        "summary": "Send forgot email password",
+        "description": "Send forgot email password",
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "email": {
+                    "type": "string",
+                    "maxLength": "45",
+                    "format": "email",
+                    "uniqueItems": true
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "type": "object",
+                  "example": {
+                    "message": "Email sent with success"
+                  }
+              }
+            }
+          },
+          "404": {
+            "description": "User not found",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "User not found"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/categories": {
+      "post": {
+        "tags": ["Categories"],
+        "summary": "Create a new category",
+        "description": "Create a new category",
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/definitions/Category"
+              }
+            }
+          }
+        },
+        "responses": {
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/Category"
+                }
+              }
+            }
+          },
+          "409": {
+            "description": "Category already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "Category already exists"
+                  }
+                }
+              }
+            }
           }
         }
       },
       "get": {
-        "tags": ["Category"],
+        "tags": ["Categories"],
         "summary": "List all categories",
         "description": "List all categories",
         "responses": {
@@ -76,7 +249,7 @@
     },
     "/categories/import": {
       "post": {
-        "tags": ["Category"],
+        "tags": ["Categories"],
         "summary": "Upload a new category",
         "description": "Upload a new category",
         "security": [{ "bearerAuth": [] }],
@@ -109,6 +282,7 @@
         "description": "Create a new specification",
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
@@ -119,30 +293,50 @@
         },
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/Specification"
+                }
+              }
+            }
           },
-          "500": {
-            "description": "Specification already exists"
+          "409": {
+            "description": "Specification already exists",
+            "content": {
+              "application/json": {
+                "example": {
+                  "message": "Specification already exists"
+                }
+              }
+            }
           }
         }
       }
     },
     "/sessions": {
       "post": {
-        "tags": ["Session"],
+        "tags": ["Login"],
         "summary": "Authentication user",
         "description": "Authentication user",
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
                 "type": "object",
                 "properties": {
                   "email": {
-                    "type": "string"
+                    "type": "string",
+                    "format": "email",
+                    "maxLength": "45"
                   },
                   "password": {
-                    "type": "string"
+                    "type": "string",
+                    "minLength": "4",
+                    "maxLength": "6",
+                    "format": "password"
                   }
                 },
                 "example": {
@@ -155,35 +349,79 @@
         },
         "responses": {
           "200": {
-            "description": "Success"
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "token": "A JWT token will return",
+                    "refresh_token": "A JWT refresh token will return",
+                    "user": {
+                      "name": "john doe",
+                      "email": "johndoe@example.com"
+                    }
+                  }
+                }
+              }
+            }
           },
           "401": {
-            "description": "Email or password incorrect"
+            "description": "Email or password incorrect",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "Email or password incorrect"
+                  }
+                }
+              }
+            }
           }
         }
       }
     },
     "/cars": {
       "post": {
-        "tags": ["Cars"],
+        "tags": ["Cars - Admin token"],
         "summary": "Create a new car",
         "description": "Create a new car",
+        "x-admin": true,
         "security": [{ "bearerAuth": [] }],
         "requestBody": {
+          "required": true,
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "/definitions/Car"
+                "$ref": "#/definitions/Car"
               }
             }
           }
         },
         "responses": {
           "201": {
-            "description": "Created"
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/response/Car"
+                }
+              }
+            }
           },
           "409": {
-            "description": "Car already exists"
+            "description": "Car already exists",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "example": {
+                    "message": "Car already exists!"
+                  }
+                }
+              }
+            }
           }
         }
       }
@@ -232,41 +470,226 @@
     }
   },
   "definitions": {
+    "User": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "minLength": "3",
+          "maxLength": "45"
+        },
+        "password": {
+          "type": "string",
+          "minLength": "4",
+          "maxLength": "6",
+          "format": "password"
+        },
+        "driver_license": {
+          "type": "string",
+          "maxLength": "10"
+        },
+        "email": {
+          "type": "string",
+          "maxLength": "45",
+          "format": "email",
+          "uniqueItems": true
+        }
+      },
+      "example": {
+        "name": "John Doe",
+        "email": "johndoe@gmail.com",
+        "driver_license": "ORR-7597",
+        "password": "1234"
+      }
+    },
     "Specification": {
       "type": "object",
       "properties": {
         "name": {
-          "type": "string"
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20",
+          "uniqueItems": true
         },
         "description": {
-          "type": "string"
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20"
         }
+      },
+      "example": {
+        "name": "Specif name",
+        "description": "Specif desc"
       }
     },
     "Car": {
       "type": "object",
       "properties": {
         "name": {
-          "type": "string"
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20",
+          "uniqueItems": true
         },
         "description": {
-          "type": "string"
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20"
         },
         "license_plate": {
-          "type": "string"
+          "type": "string",
+          "minLength": "8",
+          "maxLength": "8",
+          "uniqueItems": true
         },
         "fine_amount": {
-          "type": "number"
+          "type": "number",
+          "minimum": 1
         },
         "daily_date": {
-          "type": "number"
+          "type": "number",
+          "minimum": 1
         },
         "brand": {
-          "type": "string"
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "15"
         },
         "category_id": {
-          "type": "string"
+          "type": "string",
+          "format": "uuid"
         }
+      },
+      "example": {
+        "name": "Car name",
+        "description": "Car description",
+        "brand": "Car brand",
+        "daily_rate": 100,
+        "fine_amount": 60,
+        "license_plate": "ABA-1234",
+        "category_id": "ddd9588f-b5c8-4a00-98f9-381959e1c01a"
+      }
+    },
+    "Rental": {
+      "type": "object",
+      "properties": {
+        "car_id": {
+          "type": "string",
+          "format": "uuid"
+        },
+        "expected_return_date": {
+          "type": "string",
+          "format": "date-time",
+          "minLength": "1 day"
+        }
+      },
+      "example": {
+        "car_id": "5ee0fcea-3af5-444b-a393-c7da07c9f0c0",
+        "expected_return_date": "2023-10-31T17:32:28Z"
+      }
+    },
+    "Category": {
+      "type": "object",
+      "properties": {
+        "name": {
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20",
+          "uniqueItems": true
+        },
+        "description": {
+          "type": "string",
+          "minLength": "1",
+          "maxLength": "20"
+        }
+      },
+      "example": {
+        "name": "Category name",
+        "description": "Category desc"
+      }
+    }
+  },
+  "response": {
+    "User": {
+      "type": "object",
+      "example": {
+        "id": "4445bfd3-d95c-414d-8713-d8f956211bdb",
+        "name": "john doe",
+        "email": "johndoe@gmail.com",
+        "driver_license": "ORR-7597",
+        "avatar": null,
+        "avatar_url": null,
+        "isAdmin": false,
+        "created_at": "2023-10-31T17:32:28Z"
+      }
+    },
+    "UserAvatar": {
+      "type": "object",
+      "example": {
+        "id": "uuid",
+        "name": "string",
+        "email": "string",
+        "driver_license": "string",
+        "avatar": "string",
+        "avatar_url": "url",
+        "isAdmin": "boolean",
+        "created_at": "date"
+      }
+    },
+    "Car": {
+      "type": "object",
+      "example": {
+        "id": "ddd9588f-b5c8-4a00-98f9-381959e1c017",
+        "name": "Car name",
+        "description": "Car description",
+        "brand": "Car brand",
+        "daily_rate": 100,
+        "fine_amount": 60,
+        "license_plate": "ABA-1234",
+        "available": true,
+        "category_id": "ddd9588f-b5c8-4a00-98f9-381959e1c01a",
+        "created_at": "2023-10-31T17:32:28Z"
+      }
+    },
+    "Rental": {
+      "type": "object",
+      "example": {
+        "id": "2309f1c1-6a87-4754-acb1-bfef55893678",
+        "car_id": "5ee0fcea-3af5-444b-a393-c7da07c9f0c0",
+        "user_id": "a63efeba-f9fe-4705-b7b8-0f52841ad7f3",
+        "total": 100,
+        "created_at": "2023-10-29T17:32:28Z",
+        "updated_at": "2023-10-29T17:32:28Z",
+        "start_date": "2023-10-29T17:32:28Z",
+        "expected_return_date": "2023-10-31T17:32:28Z",
+        "end_date": "2023-10-31T10:30:28Z"
+      }
+    },
+    "Category": {
+      "type": "object",
+      "example": {
+        "id": "ddd9588f-b5c8-4a00-98f9-381959e1c020",
+        "name": "Category name",
+        "description": "Category desc",
+        "created_at": "2023-10-31T17:32:28Z"
+      }
+    },
+    "Specification": {
+      "type": "object",
+      "example": {
+        "id": "38120e3e-c6fa-4879-9039-3104be038c09",
+        "name": "Specif name",
+        "description": "Specif desc",
+        "created_at": "2023-10-31T17:32:28Z"
+      }
+    },
+    "CarImage": {
+      "type": "object",
+      "example": {
+        "id": "508bcbf2-a671-411c-abdc-6d9c49b1e77c",
+        "car_id": "5cec63cf-bf08-4125-bc44-fd2be0895306",
+        "image_name": "Image Name",
+        "created_at": "2023-10-31T17:32:28Z"
       }
     }
   },
